syntax= "proto3";

package calculatorpb;
option go_package="calculatorpb";

enum Operation{
  sum = 0;
  subtraction = 1;
  multiplication = 2;
  division = 3;
}

message Number {
  int32 first_number = 1;
  int32 second_number = 2;

}

message CalculatorRequest {
  Number content = 1;
  Operation operation = 2;

}

message CalculatorResponse {
  float result = 1;
}

message AverageRequest{
  int32 number = 1;
}

service CalculatorService {
  //Unary
  rpc Calculate(CalculatorRequest) returns (CalculatorResponse) {};

  //Streaming
  rpc Average(stream AverageRequest) returns (CalculatorResponse) {};
};